deploy: 0ee6ba7ed8c3182ac3f250a13d96bab216726899

--- a/genindex.html
+++ b/genindex.html
@@ -666,6 +666,12 @@
 </li>
         <li><a href="cpp_api/apycfixed.html#_CPPv4NK9APyCFixed5latexEv">APyCFixed::latex (C++ function)</a>
 </li>
+        <li><a href="cpp_api/apycfixed.html#_CPPv4NK9APyCFixed12leading_onesEv">APyCFixed::leading_ones (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apycfixed.html#_CPPv4NK9APyCFixed13leading_signsEv">APyCFixed::leading_signs (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apycfixed.html#_CPPv4NK9APyCFixed13leading_zerosEv">APyCFixed::leading_zeros (C++ function)</a>
+</li>
         <li><a href="cpp_api/apycfixed.html#_CPPv4N9APyCFixed3oneEii">APyCFixed::one (C++ function)</a>
 </li>
         <li><a href="cpp_api/apycfixed.html#_CPPv4NK9APyCFixedneERK8APyFixed">APyCFixed::operator!= (C++ function)</a>, <a href="cpp_api/apycfixed.html#_CPPv4NK9APyCFixedneERK9APyCFixed">[1]</a>, <a href="cpp_api/apycfixed.html#_CPPv4NK9APyCFixedneERKN2nb4int_E">[2]</a>, <a href="cpp_api/apycfixed.html#_CPPv4NK9APyCFixedneERKNSt7complexIdEE">[3]</a>, <a href="cpp_api/apycfixed.html#_CPPv4NK9APyCFixedneEd">[4]</a>
@@ -713,6 +719,8 @@
         <li><a href="cpp_api/apycfixed.html#_CPPv4NK9APyCFixed13to_string_hexEv">APyCFixed::to_string_hex (C++ function)</a>
 </li>
         <li><a href="cpp_api/apycfixed.html#_CPPv4NK9APyCFixed13to_string_octEv">APyCFixed::to_string_oct (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apycfixed.html#_CPPv4NK9APyCFixed14trailing_zerosEv">APyCFixed::trailing_zeros (C++ function)</a>
 </li>
         <li><a href="cpp_api/apycfixedarray.html#_CPPv414APyCFixedArray">APyCFixedArray (C++ class)</a>
 
@@ -1064,10 +1072,18 @@
 </li>
         <li><a href="cpp_api/apyfixedarray.html#_CPPv4NK13APyFixedArray12is_same_specERK13APyFixedArray">APyFixedArray::is_same_spec (C++ function)</a>, <a href="cpp_api/apyfixedarray.html#_CPPv4NK13APyFixedArray12is_same_specERK8APyFixed">[1]</a>
 </li>
-        <li><a href="cpp_api/apyfixedarray.html#_CPPv4NK13APyFixedArray6matmulERK13APyFixedArray">APyFixedArray::matmul (C++ function)</a>
+        <li><a href="cpp_api/apyfixedarray.html#_CPPv4NK13APyFixedArray7is_zeroEv">APyFixedArray::is_zero (C++ function)</a>
 </li>
     </ul></td>
     <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="cpp_api/apyfixedarray.html#_CPPv4NK13APyFixedArray12leading_onesEv">APyFixedArray::leading_ones (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apyfixedarray.html#_CPPv4NK13APyFixedArray13leading_signsEv">APyFixedArray::leading_signs (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apyfixedarray.html#_CPPv4NK13APyFixedArray13leading_zerosEv">APyFixedArray::leading_zeros (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apyfixedarray.html#_CPPv4NK13APyFixedArray6matmulERK13APyFixedArray">APyFixedArray::matmul (C++ function)</a>
+</li>
         <li><a href="cpp_api/apyfixedarray.html#_CPPv4NK13APyFixedArray3maxERKNSt8optionalI14PyShapeParam_tEE">APyFixedArray::max (C++ function)</a>
 </li>
         <li><a href="cpp_api/apyfixedarray.html#_CPPv4NK13APyFixedArray3minERKNSt8optionalI14PyShapeParam_tEE">APyFixedArray::min (C++ function)</a>
@@ -1135,6 +1151,8 @@
         <li><a href="cpp_api/apyfixedarray.html#_CPPv4NK13APyFixedArray9to_stringEi">APyFixedArray::to_string (C++ function)</a>
 </li>
         <li><a href="cpp_api/apyfixedarray.html#_CPPv4NK13APyFixedArray13to_string_decEv">APyFixedArray::to_string_dec (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apyfixedarray.html#_CPPv4NK13APyFixedArray14trailing_zerosEv">APyFixedArray::trailing_zeros (C++ function)</a>
 </li>
         <li><a href="cpp_api/apyfixedarray.html#_CPPv4N13APyFixedArray5zerosERK14PyShapeParam_tNSt8optionalIiEENSt8optionalIiEENSt8optionalIiEE">APyFixedArray::zeros (C++ function)</a>
 </li>
@@ -2310,8 +2328,6 @@
           <li><a href="cpp_api/apyfloat_util.html#_CPPv49is_finiteRK12APyFloatDataRK12APyFloatSpec">(C++ function)</a>
 </li>
         </ul></li>
-    </ul></td>
-    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="api/apycfixed.html#apytypes.APyCFixed.is_identical">is_identical() (apytypes.APyCFixed method)</a>
 
         <ul>
@@ -2330,6 +2346,8 @@
           <li><a href="api/apyfloatarray.html#apytypes.APyFloatArray.is_identical">(apytypes.APyFloatArray method)</a>
 </li>
         </ul></li>
+    </ul></td>
+    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="api/apyfloat.html#apytypes.APyFloat.is_inf">is_inf (apytypes.APyFloat property)</a>
 
         <ul>
@@ -2365,6 +2383,8 @@
 </li>
           <li><a href="api/apyfixed.html#apytypes.APyFixed.is_zero">(apytypes.APyFixed property)</a>
 </li>
+          <li><a href="api/apyfixedarray.html#apytypes.APyFixedArray.is_zero">(apytypes.APyFixedArray property)</a>
+</li>
           <li><a href="api/apyfloat.html#apytypes.APyFloat.is_zero">(apytypes.APyFloat property)</a>
 </li>
           <li><a href="cpp_api/apyfloat_util.html#_CPPv47is_zeroRK12APyFloatData">(C++ function)</a>
@@ -2394,12 +2414,30 @@
     <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="api/apyfixed.html#apytypes.APyFixed.leading_fractional_zeros">leading_fractional_zeros (apytypes.APyFixed property)</a>
 </li>
-        <li><a href="api/apyfixed.html#apytypes.APyFixed.leading_ones">leading_ones (apytypes.APyFixed property)</a>
+        <li><a href="api/apycfixed.html#apytypes.APyCFixed.leading_ones">leading_ones (apytypes.APyCFixed property)</a>
+
+        <ul>
+          <li><a href="api/apyfixed.html#apytypes.APyFixed.leading_ones">(apytypes.APyFixed property)</a>
 </li>
-        <li><a href="api/apyfixed.html#apytypes.APyFixed.leading_signs">leading_signs (apytypes.APyFixed property)</a>
+          <li><a href="api/apyfixedarray.html#apytypes.APyFixedArray.leading_ones">(apytypes.APyFixedArray property)</a>
 </li>
-        <li><a href="api/apyfixed.html#apytypes.APyFixed.leading_zeros">leading_zeros (apytypes.APyFixed property)</a>
+        </ul></li>
+        <li><a href="api/apycfixed.html#apytypes.APyCFixed.leading_signs">leading_signs (apytypes.APyCFixed property)</a>
+
+        <ul>
+          <li><a href="api/apyfixed.html#apytypes.APyFixed.leading_signs">(apytypes.APyFixed property)</a>
 </li>
+          <li><a href="api/apyfixedarray.html#apytypes.APyFixedArray.leading_signs">(apytypes.APyFixedArray property)</a>
+</li>
+        </ul></li>
+        <li><a href="api/apycfixed.html#apytypes.APyCFixed.leading_zeros">leading_zeros (apytypes.APyCFixed property)</a>
+
+        <ul>
+          <li><a href="api/apyfixed.html#apytypes.APyFixed.leading_zeros">(apytypes.APyFixed property)</a>
+</li>
+          <li><a href="api/apyfixedarray.html#apytypes.APyFixedArray.leading_zeros">(apytypes.APyFixedArray property)</a>
+</li>
+        </ul></li>
         <li><a href="cpp_api/apyfloat_util.html#_CPPv422leading_zeros_apyfixedRK8APyFixed">leading_zeros_apyfixed (C++ function)</a>
 </li>
         <li><a href="cpp_api/python_util.html#_CPPv425limb_vec_from_py_long_vecKNSt6size_tEPK12PyLongObject">limb_vec_from_py_long_vec (C++ function)</a>
@@ -2418,14 +2456,14 @@
 </li>
         <li><a href="cpp_api/apytypes_util.html#_CPPv4I00E30limb_vector_copy_n_sign_extendv25RANDOM_ACCESS_ITERATOR_INNSt6size_tE26RANDOM_ACCESS_ITERATOR_OUTNSt6size_tE">limb_vector_copy_n_sign_extend (C++ function)</a>
 </li>
+    </ul></td>
+    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="cpp_api/apytypes_util.html#_CPPv4I00E28limb_vector_copy_sign_extendv25RANDOM_ACCESS_ITERATOR_IN25RANDOM_ACCESS_ITERATOR_IN26RANDOM_ACCESS_ITERATOR_OUT26RANDOM_ACCESS_ITERATOR_OUT">limb_vector_copy_sign_extend (C++ function)</a>
 </li>
         <li><a href="cpp_api/apytypes_util.html#_CPPv4I00E24limb_vector_from_u64_vec15VEC_RETURN_TYPE16RANDOM_ACCESS_IT16RANDOM_ACCESS_IT">limb_vector_from_u64_vec (C++ function)</a>, <a href="cpp_api/apytypes_util.html#_CPPv4I00E24limb_vector_from_u64_vec15VEC_RETURN_TYPERK14VEC_INPUT_TYPE">[1]</a>
 </li>
         <li><a href="cpp_api/apytypes_util.html#_CPPv4I0E20limb_vector_gte_pow2b22RANDOM_ACCESS_ITERATOR22RANDOM_ACCESS_ITERATORj">limb_vector_gte_pow2 (C++ function)</a>
 </li>
-    </ul></td>
-    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="cpp_api/apytypes_util.html#_CPPv4I0E23limb_vector_is_negativeb22RANDOM_ACCESS_ITERATOR22RANDOM_ACCESS_ITERATOR">limb_vector_is_negative (C++ function)</a>
 </li>
         <li><a href="cpp_api/apytypes_util.html#_CPPv4I0E19limb_vector_is_zerob22RANDOM_ACCESS_ITERATOR22RANDOM_ACCESS_ITERATOR">limb_vector_is_zero (C++ function)</a>
@@ -3160,10 +3198,10 @@
           <li><a href="api/apyfloat.html#apytypes.APyFloat.to_fraction">(apytypes.APyFloat method)</a>
 </li>
         </ul></li>
-    </ul></td>
-    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="api/quantizationoverflow.html#apytypes.QuantizationMode.TO_NEG">TO_NEG (apytypes.QuantizationMode attribute)</a>
 </li>
+    </ul></td>
+    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="cpp_api/apytypes_util.html#_CPPv414to_nibble_listRKNSt6vectorI10apy_limb_tEENSt6size_tE">to_nibble_list (C++ function)</a>
 </li>
         <li><a href="api/apycfixedarray.html#apytypes.APyCFixedArray.to_numpy">to_numpy() (apytypes.APyCFixedArray method)</a>
@@ -3180,8 +3218,14 @@
 </li>
         <li><a href="api/quantizationoverflow.html#apytypes.QuantizationMode.TO_ZERO">TO_ZERO (apytypes.QuantizationMode attribute)</a>
 </li>
-        <li><a href="api/apyfixed.html#apytypes.APyFixed.trailing_zeros">trailing_zeros (apytypes.APyFixed property)</a>
+        <li><a href="api/apycfixed.html#apytypes.APyCFixed.trailing_zeros">trailing_zeros (apytypes.APyCFixed property)</a>
+
+        <ul>
+          <li><a href="api/apyfixed.html#apytypes.APyFixed.trailing_zeros">(apytypes.APyFixed property)</a>
 </li>
+          <li><a href="api/apyfixedarray.html#apytypes.APyFixedArray.trailing_zeros">(apytypes.APyFixedArray property)</a>
+</li>
+        </ul></li>
         <li><a href="cpp_api/apyfloat_util.html#_CPPv427translate_quantization_mode16QuantizationModeb">translate_quantization_mode (C++ function)</a>
 </li>
         <li><a href="api/apycfixedarray.html#apytypes.APyCFixedArray.transpose">transpose() (apytypes.APyCFixedArray method)</a>
