deploy: 6cf32b7ab6e98783bb87ee3d36c2280876a271f1

--- a/genindex.html
+++ b/genindex.html
@@ -554,6 +554,8 @@
   <h2>A</h2>
   <table style="width: 100%" class="indextable genindextable"><tr>
     <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="cpp_api/apytypes_util.html#_CPPv4I0E14always_false_v">always_false_v (C++ member)</a>
+</li>
         <li><a href="cpp_api/apytypes_mp.html#_CPPv424apy_addition_same_lengthP10apy_limb_tPK10apy_limb_tPK10apy_limb_tKNSt6size_tE">apy_addition_same_length (C++ function)</a>
 </li>
         <li><a href="cpp_api/apytypes_mp.html#_CPPv423apy_inplace_add_one_lsbP10apy_limb_tKNSt6size_tE">apy_inplace_add_one_lsb (C++ function)</a>
@@ -728,7 +730,7 @@
           <li><a href="api/apycfixedarray.html#apytypes.APyCFixedArray">(class in apytypes)</a>
 </li>
         </ul></li>
-        <li><a href="cpp_api/apycfixedarray.html#_CPPv4N14APyCFixedArray14APyCFixedArrayERKN2nb5typedIN2nb8iterableEN2nb3anyEEENSt8optionalIiEENSt8optionalIiEENSt8optionalIiEE">APyCFixedArray::APyCFixedArray (C++ function)</a>, <a href="cpp_api/apycfixedarray.html#_CPPv4N14APyCFixedArray14APyCFixedArrayERKNSt6vectorINSt6size_tEEENSt8optionalIiEENSt8optionalIiEENSt8optionalIiEE">[1]</a>, <a href="cpp_api/apycfixedarray.html#_CPPv4N14APyCFixedArray14APyCFixedArrayERKNSt6vectorINSt6size_tEEEii">[2]</a>, <a href="cpp_api/apycfixedarray.html#_CPPv4N14APyCFixedArray14APyCFixedArrayERKNSt6vectorINSt6size_tEEEiiRR11vector_type">[3]</a>, <a href="cpp_api/apycfixedarray.html#_CPPv4N14APyCFixedArray14APyCFixedArrayEv">[4]</a>
+        <li><a href="cpp_api/apycfixedarray.html#_CPPv4N14APyCFixedArray14APyCFixedArrayERK13APyFixedArray">APyCFixedArray::APyCFixedArray (C++ function)</a>, <a href="cpp_api/apycfixedarray.html#_CPPv4N14APyCFixedArray14APyCFixedArrayERKN2nb5typedIN2nb8iterableEN2nb3anyEEENSt8optionalIiEENSt8optionalIiEENSt8optionalIiEE">[1]</a>, <a href="cpp_api/apycfixedarray.html#_CPPv4N14APyCFixedArray14APyCFixedArrayERKNSt6vectorINSt6size_tEEENSt8optionalIiEENSt8optionalIiEENSt8optionalIiEE">[2]</a>, <a href="cpp_api/apycfixedarray.html#_CPPv4N14APyCFixedArray14APyCFixedArrayERKNSt6vectorINSt6size_tEEEii">[3]</a>, <a href="cpp_api/apycfixedarray.html#_CPPv4N14APyCFixedArray14APyCFixedArrayERKNSt6vectorINSt6size_tEEEiiRR11vector_type">[4]</a>, <a href="cpp_api/apycfixedarray.html#_CPPv4N14APyCFixedArray14APyCFixedArrayEv">[5]</a>
 </li>
         <li><a href="cpp_api/apycfixedarray.html#_CPPv4N14APyCFixedArray6arangeERKN2nb6objectERKN2nb6objectERKN2nb6objectENSt8optionalIiEENSt8optionalIiEENSt8optionalIiEE">APyCFixedArray::arange (C++ function)</a>
 </li>
@@ -2996,10 +2998,10 @@
 </li>
         <li><a href="cpp_api/apytypes_simd.html#_CPPv4N4simd10vector_mulEN9APyBufferI10apy_limb_tE11vector_type14const_iteratorEN9APyBufferI10apy_limb_tE11vector_type14const_iteratorEN9APyBufferI10apy_limb_tE11vector_type8iteratorENSt6size_tE">simd::vector_mul (C++ function)</a>
 </li>
-    </ul></td>
-    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="cpp_api/apytypes_simd.html#_CPPv4N4simd16vector_mul_constEN9APyBufferI10apy_limb_tE11vector_type14const_iteratorE10apy_limb_tN9APyBufferI10apy_limb_tE11vector_type8iteratorENSt6size_tE">simd::vector_mul_const (C++ function)</a>
 </li>
+    </ul></td>
+    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="cpp_api/apytypes_simd.html#_CPPv4N4simd26vector_multiply_accumulateEN9APyBufferI10apy_limb_tE11vector_type14const_iteratorEN9APyBufferI10apy_limb_tE11vector_type14const_iteratorENSt6size_tE">simd::vector_multiply_accumulate (C++ function)</a>
 </li>
         <li><a href="cpp_api/apytypes_simd.html#_CPPv4N4simd10vector_negEN9APyBufferI10apy_limb_tE11vector_type8iteratorEN9APyBufferI10apy_limb_tE11vector_type14const_iteratorENSt6size_tE">simd::vector_neg (C++ function)</a>
@@ -3046,7 +3048,11 @@
 </li>
         <li><a href="cpp_api/apytypes_util.html#c.STD_DIV">STD_DIV (C macro)</a>
 </li>
+        <li><a href="cpp_api/apytypes_util.html#c.STD_EQ">STD_EQ (C macro)</a>
+</li>
         <li><a href="cpp_api/apytypes_util.html#c.STD_MUL">STD_MUL (C macro)</a>
+</li>
+        <li><a href="cpp_api/apytypes_util.html#c.STD_NE">STD_NE (C macro)</a>
 </li>
         <li><a href="cpp_api/apytypes_util.html#c.STD_SUB">STD_SUB (C macro)</a>
 </li>
