deploy: d6cf4e901a2fed124ba51f4fe64e96a3e7e4fbd0

--- a/genindex.html
+++ b/genindex.html
@@ -778,6 +778,8 @@
 </li>
         <li><a href="cpp_api/apycfixedarray.html#_CPPv4NK14APyCFixedArray8int_bitsEv">APyCFixedArray::int_bits (C++ function)</a>
 </li>
+        <li><a href="cpp_api/apycfixedarray.html#_CPPv4NK14APyCFixedArray32is_mac_with_threadpool_justifiedENSt6size_tE">APyCFixedArray::is_mac_with_threadpool_justified (C++ function)</a>
+</li>
         <li><a href="cpp_api/apycfixedarray.html#_CPPv4NK14APyCFixedArray12is_same_specERK14APyCFixedArray">APyCFixedArray::is_same_spec (C++ function)</a>, <a href="cpp_api/apycfixedarray.html#_CPPv4NK14APyCFixedArray12is_same_specERK9APyCFixed">[1]</a>
 </li>
         <li><a href="cpp_api/apycfixedarray.html#_CPPv4NK14APyCFixedArray6matmulERK14APyCFixedArray">APyCFixedArray::matmul (C++ function)</a>
@@ -1072,18 +1074,20 @@
 </li>
         <li><a href="cpp_api/apyfixedarray.html#_CPPv4NK13APyFixedArray8int_bitsEv">APyFixedArray::int_bits (C++ function)</a>
 </li>
+        <li><a href="cpp_api/apyfixedarray.html#_CPPv4NK13APyFixedArray32is_mac_with_threadpool_justifiedENSt6size_tE">APyFixedArray::is_mac_with_threadpool_justified (C++ function)</a>
+</li>
         <li><a href="cpp_api/apyfixedarray.html#_CPPv4NK13APyFixedArray12is_same_specERK13APyFixedArray">APyFixedArray::is_same_spec (C++ function)</a>, <a href="cpp_api/apyfixedarray.html#_CPPv4NK13APyFixedArray12is_same_specERK8APyFixed">[1]</a>
 </li>
         <li><a href="cpp_api/apyfixedarray.html#_CPPv4NK13APyFixedArray7is_zeroEv">APyFixedArray::is_zero (C++ function)</a>
 </li>
-    </ul></td>
-    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="cpp_api/apyfixedarray.html#_CPPv4NK13APyFixedArray12leading_onesEv">APyFixedArray::leading_ones (C++ function)</a>
 </li>
         <li><a href="cpp_api/apyfixedarray.html#_CPPv4NK13APyFixedArray13leading_signsEv">APyFixedArray::leading_signs (C++ function)</a>
 </li>
         <li><a href="cpp_api/apyfixedarray.html#_CPPv4NK13APyFixedArray13leading_zerosEv">APyFixedArray::leading_zeros (C++ function)</a>
 </li>
+    </ul></td>
+    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="cpp_api/apyfixedarray.html#_CPPv4NK13APyFixedArray6matmulERK13APyFixedArray">APyFixedArray::matmul (C++ function)</a>
 </li>
         <li><a href="cpp_api/apyfixedarray.html#_CPPv4NK13APyFixedArray3maxERKNSt8optionalI14PyShapeParam_tEE">APyFixedArray::max (C++ function)</a>
@@ -1412,9 +1416,21 @@
         </ul></li>
         <li><a href="cpp_api/apyfloatarray.html#_CPPv4NK13APyFloatArray5_castENSt7uint8_tENSt7uint8_tE5exp_t16QuantizationMode">APyFloatArray::_cast (C++ function)</a>, <a href="cpp_api/apyfloatarray.html#_CPPv4NK13APyFloatArray5_castENSt7uint8_tENSt7uint8_tE5exp_tNSt8optionalI16QuantizationModeEE">[1]</a>
 </li>
+        <li><a href="cpp_api/apyfloatarray.html#_CPPv4I0EN13APyFloatArray36_check_and_set_exp_bits_from_ndarrayEbRKN2nb7ndarrayIN2nb8c_contigEEE">APyFloatArray::_check_and_set_exp_bits_from_ndarray (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apyfloatarray.html#_CPPv4I0EN13APyFloatArray36_check_and_set_man_bits_from_ndarrayEbRKN2nb7ndarrayIN2nb8c_contigEEE">APyFloatArray::_check_and_set_man_bits_from_ndarray (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apyfloatarray.html#_CPPv4I0EN13APyFloatArray37_check_and_set_sign_bits_from_ndarrayEbRKN2nb7ndarrayIN2nb8c_contigEEE">APyFloatArray::_check_and_set_sign_bits_from_ndarray (C++ function)</a>
+</li>
         <li><a href="cpp_api/apyfloatarray.html#_CPPv4N13APyFloatArray18_from_bits_ndarrayERKN2nb7ndarrayIN2nb8c_contigEEEiiNSt8optionalI5exp_tEE">APyFloatArray::_from_bits_ndarray (C++ function)</a>
 </li>
         <li><a href="cpp_api/apyfloatarray.html#_CPPv4N13APyFloatArray22_set_bits_from_ndarrayERKN8nanobind7ndarrayIN8nanobind8c_contigEEE">APyFloatArray::_set_bits_from_ndarray (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apyfloatarray.html#_CPPv4N13APyFloatArray26_set_exp_bits_from_ndarrayERKN2nb7ndarrayIN2nb8c_contigEEE">APyFloatArray::_set_exp_bits_from_ndarray (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apyfloatarray.html#_CPPv4N13APyFloatArray26_set_man_bits_from_ndarrayERKN2nb7ndarrayIN2nb8c_contigEEE">APyFloatArray::_set_man_bits_from_ndarray (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apyfloatarray.html#_CPPv4N13APyFloatArray27_set_sign_bits_from_ndarrayERKN2nb7ndarrayIN2nb8c_contigEEE">APyFloatArray::_set_sign_bits_from_ndarray (C++ function)</a>
 </li>
         <li><a href="cpp_api/apyfloatarray.html#_CPPv4N13APyFloatArray24_set_values_from_ndarrayERKN8nanobind7ndarrayIN8nanobind8c_contigEEE">APyFloatArray::_set_values_from_ndarray (C++ function)</a>
 </li>
@@ -1481,6 +1497,8 @@
         <li><a href="cpp_api/apyfloatarray.html#_CPPv4N13APyFloatArray8identityERKN2nb4int_ENSt7uint8_tENSt7uint8_tENSt8optionalI5exp_tEE">APyFloatArray::identity (C++ function)</a>
 </li>
         <li><a href="cpp_api/apyfloatarray.html#_CPPv4NK13APyFloatArray12is_identicalERKN2nb6objectEb">APyFloatArray::is_identical (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apyfloatarray.html#_CPPv4NK13APyFloatArray32is_mac_with_threadpool_justifiedENSt6size_tE">APyFloatArray::is_mac_with_threadpool_justified (C++ function)</a>
 </li>
         <li><a href="cpp_api/apyfloatarray.html#_CPPv4NK13APyFloatArray12is_same_specERK13APyFloatArray">APyFloatArray::is_same_spec (C++ function)</a>, <a href="cpp_api/apyfloatarray.html#_CPPv4NK13APyFloatArray12is_same_specERK8APyFloat">[1]</a>
 </li>
@@ -1595,6 +1613,10 @@
         <li><a href="cpp_api/apyfloat_util.html#_CPPv434array_floating_point_cast_no_quantRK12APyFloatDataRK12APyFloatSpecK5exp_tK5exp_tKiKNSt7int64_tE">array_floating_point_cast_no_quant (C++ function)</a>
 </li>
         <li><a href="cpp_api/apyfloat_util.html#_CPPv4I0E39array_floating_point_cast_pos_man_delta12APyFloatDataRK12APyFloatDataRK12APyFloatSpecRK12APyFloatSpec16QuantizationMode19QNTZ_FUNC_SIGNATUREK5exp_tK5exp_tK5man_tK5man_tKiK5man_tKNSt7int64_tE">array_floating_point_cast_pos_man_delta (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apytypes_common.html#_CPPv418ArrayThreadSetting">ArrayThreadSetting (C++ struct)</a>
+</li>
+        <li><a href="cpp_api/apytypes_common.html#_CPPv4N18ArrayThreadSetting15n_mac_thresholdE">ArrayThreadSetting::n_mac_threshold (C++ member)</a>
 </li>
         <li><a href="api/apyfixed.html#apytypes.APyFixed.as_integer_ratio">as_integer_ratio() (apytypes.APyFixed method)</a>
 
@@ -2912,6 +2934,8 @@
 </li>
         <li><a href="cpp_api/apytypes_scratch_vector.html#_CPPv4NK13ScratchVector5crendEv">ScratchVector::crend (C++ function)</a>
 </li>
+        <li><a href="cpp_api/apytypes_scratch_vector.html#_CPPv4NK13ScratchVector4dataEv">ScratchVector::data (C++ function)</a>
+</li>
         <li><a href="cpp_api/apytypes_scratch_vector.html#_CPPv4N13ScratchVector15difference_typeE">ScratchVector::difference_type (C++ type)</a>
 </li>
         <li><a href="cpp_api/apytypes_scratch_vector.html#_CPPv4N13ScratchVector3endEv">ScratchVector::end (C++ function)</a>, <a href="cpp_api/apytypes_scratch_vector.html#_CPPv4NK13ScratchVector3endEv">[1]</a>
@@ -3166,6 +3190,20 @@
 </li>
         <li><a href="cpp_api/apytypes_common.html#_CPPv4N18ThirdPartyArrayTag10TENSORFLOWE">ThirdPartyArrayTag::TENSORFLOW (C++ enumerator)</a>
 </li>
+        <li><a href="cpp_api/apytypes_common.html#_CPPv411thread_pool">thread_pool (C++ member)</a>
+</li>
+        <li><a href="cpp_api/apytypes_common.html#_CPPv420thread_pool_settings">thread_pool_settings (C++ member)</a>
+</li>
+        <li><a href="cpp_api/apytypes_common.html#_CPPv418ThreadPoolSettings">ThreadPoolSettings (C++ struct)</a>
+</li>
+        <li><a href="cpp_api/apytypes_common.html#_CPPv4N18ThreadPoolSettings14apycfixedarrayE">ThreadPoolSettings::apycfixedarray (C++ member)</a>
+</li>
+        <li><a href="cpp_api/apytypes_common.html#_CPPv4N18ThreadPoolSettings14apycfloatarrayE">ThreadPoolSettings::apycfloatarray (C++ member)</a>
+</li>
+        <li><a href="cpp_api/apytypes_common.html#_CPPv4N18ThreadPoolSettings13apyfixedarrayE">ThreadPoolSettings::apyfixedarray (C++ member)</a>
+</li>
+        <li><a href="cpp_api/apytypes_common.html#_CPPv4N18ThreadPoolSettings13apyfloatarrayE">ThreadPoolSettings::apyfloatarray (C++ member)</a>
+</li>
         <li><a href="api/quantizationoverflow.html#apytypes.QuantizationMode.TIES_AWAY">TIES_AWAY (apytypes.QuantizationMode attribute)</a>
 </li>
         <li><a href="api/quantizationoverflow.html#apytypes.QuantizationMode.TIES_EVEN">TIES_EVEN (apytypes.QuantizationMode attribute)</a>
@@ -3198,6 +3236,8 @@
         </ul></li>
         <li><a href="cpp_api/apyfloat_util.html#_CPPv414to_bits_uint64RK12APyFloatDataNSt7uint8_tENSt7uint8_tE">to_bits_uint64 (C++ function)</a>
 </li>
+    </ul></td>
+    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="api/apyfixed.html#apytypes.APyFixed.to_fraction">to_fraction() (apytypes.APyFixed method)</a>
 
         <ul>
@@ -3206,8 +3246,6 @@
         </ul></li>
         <li><a href="api/quantizationoverflow.html#apytypes.QuantizationMode.TO_NEG">TO_NEG (apytypes.QuantizationMode attribute)</a>
 </li>
-    </ul></td>
-    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="cpp_api/apytypes_util.html#_CPPv414to_nibble_listRKNSt6vectorI10apy_limb_tEENSt6size_tE">to_nibble_list (C++ function)</a>
 </li>
         <li><a href="api/apycfixedarray.html#apytypes.APyCFixedArray.to_numpy">to_numpy() (apytypes.APyCFixedArray method)</a>
