deploy: debc4aa87bec886d6ae5176d425d856c3aae60ae

--- a/genindex.html
+++ b/genindex.html
@@ -808,6 +808,8 @@
 </li>
         <li><a href="cpp_api/apycfixedarray.html#_CPPv4NK14APyCFixedArraycoEv">APyCFixedArray::operator~ (C++ function)</a>
 </li>
+        <li><a href="cpp_api/apycfixedarray.html#_CPPv4NK14APyCFixedArray13outer_productERK14APyCFixedArray">APyCFixedArray::outer_product (C++ function)</a>
+</li>
         <li><a href="cpp_api/apycfixedarray.html#_CPPv4NK14APyCFixedArray4prodERKNSt8optionalI14PyShapeParam_tEE">APyCFixedArray::prod (C++ function)</a>
 </li>
         <li><a href="cpp_api/apycfixedarray.html#_CPPv4NK14APyCFixedArray13python_pickleEv">APyCFixedArray::python_pickle (C++ function)</a>
@@ -1086,10 +1088,10 @@
 </li>
         <li><a href="cpp_api/apyfixedarray.html#_CPPv4NK13APyFixedArray13leading_zerosEv">APyFixedArray::leading_zeros (C++ function)</a>
 </li>
-    </ul></td>
-    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="cpp_api/apyfixedarray.html#_CPPv4NK13APyFixedArray6matmulERK13APyFixedArray">APyFixedArray::matmul (C++ function)</a>
 </li>
+    </ul></td>
+    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="cpp_api/apyfixedarray.html#_CPPv4NK13APyFixedArray3maxERKNSt8optionalI14PyShapeParam_tEE">APyFixedArray::max (C++ function)</a>
 </li>
         <li><a href="cpp_api/apyfixedarray.html#_CPPv4NK13APyFixedArray3minERKNSt8optionalI14PyShapeParam_tEE">APyFixedArray::min (C++ function)</a>
@@ -1125,6 +1127,8 @@
         <li><a href="cpp_api/apyfixedarray.html#_CPPv4N13APyFixedArrayrSEKi">APyFixedArray::operator&gt;&gt;= (C++ function)</a>
 </li>
         <li><a href="cpp_api/apyfixedarray.html#_CPPv4NK13APyFixedArraycoEv">APyFixedArray::operator~ (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apyfixedarray.html#_CPPv4NK13APyFixedArray13outer_productERK13APyFixedArray">APyFixedArray::outer_product (C++ function)</a>
 </li>
         <li><a href="cpp_api/apyfixedarray.html#_CPPv4NK13APyFixedArray4prodERKNSt8optionalI14PyShapeParam_tEE">APyFixedArray::prod (C++ function)</a>
 </li>
@@ -1545,6 +1549,8 @@
         <li><a href="cpp_api/apyfloatarray.html#_CPPv4I0ENK13APyFloatArraygeE15ThirdPartyArrayIbERK1T">APyFloatArray::operator&gt;= (C++ function)</a>
 </li>
         <li><a href="cpp_api/apyfloatarray.html#_CPPv4NK13APyFloatArraycoEv">APyFloatArray::operator~ (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apyfloatarray.html#_CPPv4NK13APyFloatArray13outer_productERK13APyFloatArray">APyFloatArray::outer_product (C++ function)</a>
 </li>
         <li><a href="cpp_api/apyfloatarray.html#_CPPv4NK13APyFloatArray4prodERKNSt8optionalI14PyShapeParam_tEE">APyFloatArray::prod (C++ function)</a>
 </li>
@@ -2686,6 +2692,18 @@
         </ul></li>
         <li><a href="api/arrayfunctions.html#apytypes.ones_like">ones_like() (in module apytypes)</a>
 </li>
+        <li><a href="api/apycfixedarray.html#apytypes.APyCFixedArray.outer">outer() (apytypes.APyCFixedArray method)</a>
+
+        <ul>
+          <li><a href="api/apycfloatarray.html#apytypes.APyCFloatArray.outer">(apytypes.APyCFloatArray method)</a>
+</li>
+          <li><a href="api/apyfixedarray.html#apytypes.APyFixedArray.outer">(apytypes.APyFixedArray method)</a>
+</li>
+          <li><a href="api/apyfloatarray.html#apytypes.APyFloatArray.outer">(apytypes.APyFloatArray method)</a>
+</li>
+          <li><a href="api/arrayfunctions.html#apytypes.outer">(in module apytypes)</a>
+</li>
+        </ul></li>
     </ul></td>
     <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="cpp_api/apyfixed_util.html#_CPPv4I0E8overflowv22RANDOM_ACCESS_ITERATOR22RANDOM_ACCESS_ITERATORii12OverflowMode">overflow (C++ function)</a>
