deploy: 2983cc0da986c2d0c053ee7c61ad63e11b22b50d

--- a/genindex.html
+++ b/genindex.html
@@ -532,9 +532,9 @@
 </li>
         <li><a href="cpp_api/apyfixed_util.html#_CPPv4I0E18_quantize_rnd_zerov28RANDOM_ACCESS_ITERATOR_INOUT28RANDOM_ACCESS_ITERATOR_INOUTiiii">_quantize_rnd_zero (C++ function)</a>
 </li>
-        <li><a href="cpp_api/apyfixed_util.html#_CPPv4I0E21_quantize_stoch_equalv28RANDOM_ACCESS_ITERATOR_INOUT28RANDOM_ACCESS_ITERATOR_INOUTiiiiNSt8functionIFNSt8uint64_tEvEEE">_quantize_stoch_equal (C++ function)</a>
+        <li><a href="cpp_api/apyfixed_util.html#_CPPv4I0E21_quantize_stoch_equalv28RANDOM_ACCESS_ITERATOR_INOUT28RANDOM_ACCESS_ITERATOR_INOUTiiii14Rnd64FuncPtr_t">_quantize_stoch_equal (C++ function)</a>
 </li>
-        <li><a href="cpp_api/apyfixed_util.html#_CPPv4I0E24_quantize_stoch_weightedv28RANDOM_ACCESS_ITERATOR_INOUT28RANDOM_ACCESS_ITERATOR_INOUTiiiiNSt8functionIFNSt8uint64_tEvEEE">_quantize_stoch_weighted (C++ function)</a>
+        <li><a href="cpp_api/apyfixed_util.html#_CPPv4I0E24_quantize_stoch_weightedv28RANDOM_ACCESS_ITERATOR_INOUT28RANDOM_ACCESS_ITERATOR_INOUTiiii14Rnd64FuncPtr_t">_quantize_stoch_weighted (C++ function)</a>
 </li>
         <li><a href="cpp_api/apyfixed_util.html#_CPPv4I0E13_quantize_trnv28RANDOM_ACCESS_ITERATOR_INOUT28RANDOM_ACCESS_ITERATOR_INOUTiiii">_quantize_trn (C++ function)</a>
 </li>
@@ -1088,10 +1088,10 @@
 </li>
         <li><a href="cpp_api/apyfixedarray.html#_CPPv4NK13APyFixedArray13leading_zerosEv">APyFixedArray::leading_zeros (C++ function)</a>
 </li>
-        <li><a href="cpp_api/apyfixedarray.html#_CPPv4NK13APyFixedArray6matmulERK13APyFixedArray">APyFixedArray::matmul (C++ function)</a>
-</li>
     </ul></td>
     <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="cpp_api/apyfixedarray.html#_CPPv4NK13APyFixedArray6matmulERK13APyFixedArray">APyFixedArray::matmul (C++ function)</a>
+</li>
         <li><a href="cpp_api/apyfixedarray.html#_CPPv4NK13APyFixedArray3maxERKNSt8optionalI14PyShapeParam_tEE">APyFixedArray::max (C++ function)</a>
 </li>
         <li><a href="cpp_api/apyfixedarray.html#_CPPv4NK13APyFixedArray3minERKNSt8optionalI14PyShapeParam_tEE">APyFixedArray::min (C++ function)</a>
@@ -1591,8 +1591,6 @@
 </li>
         </ul></li>
         <li><a href="cpp_api/apytypes_common.html#_CPPv4N27APyFloatQuantizationContext27APyFloatQuantizationContextERK16QuantizationModeNSt8optionalINSt8uint64_tEEE">APyFloatQuantizationContext::APyFloatQuantizationContext (C++ function)</a>
-</li>
-        <li><a href="cpp_api/apytypes_common.html#_CPPv4N27APyFloatQuantizationContext14default_engineE">APyFloatQuantizationContext::default_engine (C++ member)</a>
 </li>
         <li><a href="cpp_api/apytypes_common.html#_CPPv4N27APyFloatQuantizationContext13enter_contextEv">APyFloatQuantizationContext::enter_context (C++ function)</a>
 </li>
@@ -2818,7 +2816,7 @@
 </li>
         <li><a href="cpp_api/apytypes_common.html#_CPPv4N16QuantizationMode8TRN_ZEROE">QuantizationMode::TRN_ZERO (C++ enumerator)</a>
 </li>
-        <li><a href="cpp_api/apyfixed_util.html#_CPPv4I0E8quantizev28RANDOM_ACCESS_ITERATOR_INOUT28RANDOM_ACCESS_ITERATOR_INOUTiiii16QuantizationModeNSt8optionalINSt8functionIFNSt8uint64_tEvEEEEE">quantize (C++ function)</a>
+        <li><a href="cpp_api/apyfixed_util.html#_CPPv4I0E8quantizev28RANDOM_ACCESS_ITERATOR_INOUT28RANDOM_ACCESS_ITERATOR_INOUTiiii16QuantizationMode14Rnd64FuncPtr_t">quantize (C++ function)</a>
 </li>
         <li><a href="cpp_api/apyfloat_util.html#_CPPv420quantize_apymantissaR8APyFixedbi16QuantizationMode">quantize_apymantissa (C++ function)</a>
 </li>
@@ -2868,10 +2866,10 @@
 </li>
         <li><a href="cpp_api/apytypes_util.html#_CPPv4N12remove_cvref4typeE">remove_cvref::type (C++ type)</a>
 </li>
-    </ul></td>
-    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="cpp_api/apytypes_util.html#_CPPv4I0E14remove_cvref_t">remove_cvref_t (C++ type)</a>
 </li>
+    </ul></td>
+    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="api/apycfixedarray.html#apytypes.APyCFixedArray.reshape">reshape() (apytypes.APyCFixedArray method)</a>
 
         <ul>
@@ -2891,6 +2889,10 @@
         <li><a href="cpp_api/apytypes_common.html#_CPPv48rnd64_fpv">rnd64_fp (C++ function)</a>
 </li>
         <li><a href="cpp_api/apytypes_common.html#_CPPv48rnd64_fxv">rnd64_fx (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apytypes_common.html#_CPPv411Rnd64Func_t">Rnd64Func_t (C++ type)</a>
+</li>
+        <li><a href="cpp_api/apytypes_common.html#_CPPv414Rnd64FuncPtr_t">Rnd64FuncPtr_t (C++ type)</a>
 </li>
         <li><a href="api/quantizationoverflow.html#apytypes.QuantizationMode.RND_CONV">RND_CONV (apytypes.QuantizationMode attribute)</a>
 </li>
